# biomed-agent-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: report_workflow.py  state.py  tools.py
app/api/routes/: agent.py  documents.py  extract.py  health.py  query.py
app/core/: config.py  container.py  errors.py
app/extraction/: schemas.py  trial_extractor.py
app/ingestion/: chunking.py  loaders.py  pipeline.py
app/llm/: client.py
app/rag/: embeddings.py  prompts.py  vector_store.py
app/schemas/: agent.py  documents.py  extract.py  query.py
app/services/: agent_service.py  document_service.py  extraction_service.py  ingest_job_service.py  query_service.py
docs/: DEMO_SCRIPT.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md
evals/: rag_cases.json  run_rag_eval.py
samples/: pubmed_adc_summary.md  sop_cell_culture.md  trial_adc_001.md
scripts/: demo_smoke.sh
tests/: conftest.py  test_api_smoke.py  test_chunking.py  test_health.py  test_ingest_jobs.py  test_llm_providers.py  test_loaders.py  test_rag_citations.py  test_rag_eval.py  test_report_workflow.py  test_trial_extraction_schema.py
